--- a/src/index.css
+++ b/src/index.css
@@ -292,4 +292,8 @@ input:focus, select:focus {
   .header h1 {
     font-size: 2rem;
   }
+  .signature-pad {
+    width: 100%;
+    height: 150px;
+  }
 }
